# portal-checker

./: .commitlintrc.json  .coverage  .coverage.Mac.localdomain.30065.XzkWsMdx  .dockerignore  .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Pipfile  README-spacy-setup.md  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt  sonar-project.properties  taskfile.yaml  test_exclusions.py  urls.txt
.flox/: env.json
.flox/env/: manifest.toml
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: branch-build.yaml  build.yml  cd.yaml  changelog.yml  docker-build-on-branch-push.yml  full-release-on-main-merge.yml  helm-chart-test-validation.yml  helm-release.yml  helm-test.yml  opencommit.yaml  release.yml  scan.yaml  sonarqube-scan.yaml
.task/checksum/: build
app/: .dockerignore  Dockerfile  Pipfile  app.py  docker-compose.yaml  requirements.txt  taskfile.yaml  urls.txt
app/src/: Pipfile  app.py  requirements.txt  urls.txt
app/src/templates/: index.html  index.html.bak
app/templates/: index.html
config/: excluded-urls.yaml  urls.yaml
deployment/: index.html  values.yaml
deployment/templates/: bindind.yaml  configmaps.yaml  ingress.yaml
docker/: Dockerfile  Dockerfile.spacy-init  copy-models.sh
helm/: .helmignore  Chart.yaml  artifacthub-repo.yml  values.yaml
helm/templates/: _helpers.tpl  binding.yaml  cert-secret.yaml  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service-account.yaml  service.yaml  spacy-pvc.yaml
helm/values/: README.md  docker.yaml
k8s-test/: README.md  deploy-all.sh  namespace.yaml  test-app-deployment.yaml  test-app-service.yaml  test-ingress-excluded.yaml  test-ingress.yaml
portal-checker/: .argocd.json  values.develop.yaml  values.in-cluster.yaml  values.preprod.yaml  values.yaml
secrets/: argocd-portal-checker.yaml
src/: __init__.py  api.py  app.py  autoswagger_integration.py  config.py  kubernetes_client.py  main.py  utils.py
static/: script.js  styles.css
templates/: index.html
tests/: test_annotations_display.py  test_annotations_ui_improvements.py  test_config.py  test_config_utils.py  test_error_handling.py  test_exclude.py  test_excluded_urls.py  test_flask_routes.py  test_health_endpoint.py  test_integration_ui.py  test_k8s_simple.py  test_memory_monitoring.py  test_response_time_rounding.py  test_route.py  test_utils.py  test_visual_validation.py
